Backend: Removed guest reservations.
